tests/specs/bench/only_failure/main.out
Check [WILDCARD]/main.ts
    CPU | [WILDCARD]
Runtime | Deno [WILDCARD] ([WILDCARD])

[WILDCARD]/main.ts

benchmark   time/iter (avg)        iter/s      (min … max)           p75      p99     p995
----------- ----------------------------- --------------------- --------------------------
only        error: AssertionError
    throw new AssertionError(msg);
          ^
    at assert ([WILDCARD])
    at fn ([WILDCARD])

error: Bench failed
